Fix playlist-service
