# user-service/src/main/java/zingmp3/dto/AuthenticatedRequest.java
@@ -1,15 +1,0 @@
-package zingmp3.dto;
-
-import lombok.Builder;
-import lombok.Data;
-import lombok.Getter;
-import lombok.Setter;
-
-@Data
-@Getter
-@Setter
-@Builder
-public class AuthenticatedRequest {
-    private String username;
-    private String password;
-}
