# user-service/src/main/java/zingmp3/dto/RegisterRequest.java
@@ -1,18 +1,0 @@
-package zingmp3.dto;
-
-import lombok.Builder;
-import lombok.Data;
-import lombok.Getter;
-import lombok.Setter;
-
-@Data
-@Builder
-@Getter
-@Setter
-public class RegisterRequest {
-    private String username;
-    private String password;
-    private String email;
-    private String firstName;
-    private String lastName;
-}
