# user-service/src/main/java/zingmp3/dto/UserRegistrationRecord.java
@@ -1,10 +1,15 @@
 package zingmp3.dto;
 
-public record UserRegistrationRecord(
-        String username,
-        String password,
-        String email,
-        String firstName,
-        String lastName
-) {
+import io.swagger.v3.oas.annotations.media.Schema;
+import lombok.Builder;
+import lombok.Data;
+
+
+@Data
+public class UserRegistrationRecord {
+    private String email;
+    @Schema(format = "password")
+    private String password;
+    private String name;
 }
+
